--- a/static/classify.html
+++ b/static/classify.html
@@ -38,13 +38,18 @@
       </div>
 
       <details class="card help-card">
-        <summary class="label">📋 分类标准与评分规则说明</summary>
+        <summary class="label">📋 分类标准与评分规则说明 (v2 - 根据专家反馈修订)</summary>
         <div class="help-content">
+          <div class="help-note" style="background:#fff3cd;border-left:3px solid #ffc107;margin-bottom:16px;">
+            <strong>⚠️ 重要：目标药物判断规则</strong><br/>
+            PDF文件名格式为 "目标药物名-文章标题.pdf"，<strong>文件名前缀</strong>即为该文献的目标监测药物。<br/>
+            例如："卡马西平-左乙拉西坦致剥脱性皮炎.pdf" → 目标药物是"卡马西平"
+          </div>
           <div class="help-item">
             <span class="help-label rejection">Rejection</span>
             <span>
-              <strong>拒绝</strong> - 文章中缺少 drug（目标药物）或 AE（不良事件）任意一个要素<br/>
-              <em style="color:#666;">例：替格瑞洛文章但无AE；心肌梗死文章但无目标药物</em>
+              <strong>拒绝</strong> - 缺少 drug，或者既无 AE 也无特殊情况（完全无安全监测价值）<br/>
+              <em style="color:#666;">例：文章完全未提及目标药物；或有药物但无任何安全相关信息</em>
             </span>
           </div>
           <div class="help-item">
@@ -52,15 +57,15 @@
             <span>
               <strong>个例安全报告</strong> - 满足以下任一条件：<br/>
               • drug + AE + 因果关系 + 单个患者<br/>
-              • drug + 特殊情况 + 单个患者<br/>
-              <em style="color:#666;">例：替格瑞洛+AE+因果关系+单患者</em>
+              • drug + 特殊情况 + 单个患者 <strong>(特殊情况可独立构成信号)</strong><br/>
+              <em style="color:#666;">例：卡马西平+儿童用药+单患者；布林佐胺+药物无效+单患者</em>
             </span>
           </div>
           <div class="help-item">
             <span class="help-label multiple">Multiple_Patients</span>
             <span>
               <strong>多患者报告</strong> - 与 ICSR 相同标准，但涉及多个患者（>1例）<br/>
-              <em style="color:#666;">例：替格瑞洛+AE+因果关系+多患者队列研究</em>
+              <em style="color:#666;">例：缬沙坦+药物无效+多患者队列研究</em>
             </span>
           </div>
           <div class="help-item">
@@ -73,13 +78,14 @@
           <div class="help-item">
             <span class="help-label signal">Other_Safety_Signal</span>
             <span>
-              <strong>其他安全信号</strong> - 有 drug 和 AE，但缺少因果关系或患者信息<br/>
-              <em style="color:#666;">例：替格瑞洛+AE但无因果关系</em>
+              <strong>其他安全信号</strong> - 有 drug 且有 AE/特殊情况，但缺少因果关系或患者信息<br/>
+              <strong>有风险价值，不应归为 Rejection</strong><br/>
+              <em style="color:#666;">例：卡马西平+AE 但无因果关系 → 仍有监测价值</em>
             </span>
           </div>
 
           <div class="help-note">
-            <strong>特殊情况包括：</strong>儿童用药、药物无效/疗效不佳、怀孕/哺乳期暴露、过量、用药错误、药物相互作用、超说明书用药、职业暴露、药物滥用/依赖、停药反应等
+            <strong>特殊情况包括（可独立构成安全信号）：</strong>儿童用药、药物无效/疗效不佳、怀孕/哺乳期暴露、过量、用药错误、药物相互作用、超说明书用药、职业暴露、药物滥用/依赖、停药反应等
           </div>
 
           <div class="scoring-section">
